# Hand

./: README  _config.yml  index.html  index.md  params.json
hand/: .gitignore  CMakeLists.txt  COPYING.LESSER  LICENSE  Makefile  README  build.sh  hand.cpp  hand.sh  handserver_starter.cpp  main.cpp
hand/apps/: CMakeLists.txt
hand/apps/test/: Makefile
hand/apps/test1/: test1.cpp  test1.h  test1_direct_starter.sh
hand/apps/test2/: test2.cpp
hand/apps/themes/: CMakeLists.txt  Makefile
hand/toolkit/: CMakeLists.txt  Makefile
hand/toolkit/base/: CMakeLists.txt  Makefile  datamanager.cpp  datamanager.h  defines.h  factory.cpp  factory.h  filesystem.cpp  filesystem.h  functoid.cpp  functoidlist.cpp  functoidnode.cpp  handapp.cpp  handapp.h  handapploader.h  handserver.cpp  handserver.h  listeners.h  module.cpp  module.h  modulelib.cpp  modulelib.h  typenames.h  user.cpp  user.h
hand/toolkit/data/: CMakeLists.txt  collection.cpp  collection.h  data.cpp  data.h  event.h  hmiitem.cpp  hmiitem.h  interface.cpp  interface.h  item.cpp  item.h  list.cpp  list.h  map.cpp  map.h  method.h  vector.cpp  vector.h
hand/toolkit/graph/: CMakeLists.txt  Makefile  baselist.h  collection.cpp  collection.h  data.cpp  data.h  defines.h  functoid.cpp  functoid.h  functoidlist.cpp  functoidlist.h  hmiitem.cpp  hmiitem.h  interface.cpp  interface.h  link.cpp  link.h  list.cpp  list.h  method.h  vertex.cpp  vertex.h
hand/toolkit/include/: datamanager.h  defines.h  device.h  factory.h  filesystem.h  functoid.h  functoidlist.h  functoidnode.h  functoidsearch.h  hand.h  handapp.h  handapploader.h  handserver.h  inputstate.h  layout.h  rect.h  rgb.h  searchexpression.h  stdfields.h  theme.h
hand/toolkit/input/: CMakeLists.txt  Makefile  chord.cpp  chord.h  defines.h  device.cpp  device.h  eventhandler.h  hand.cpp  hand.h  inputstate.cpp  inputstate.h  interaction.cpp  node.cpp  (+6 more)
(+219 files in other folders)
